# GeoPic-Server

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
proto/: service.proto
src/: app_controller.py  app_module.py  app_service.py  config.py
src/articles/: articles_controller.py  articles_entity.py  articles_model.py  articles_module.py  articles_service.py
src/commons/: file_upload.py  grpc.py
src/geocodes/: geocodes_controller.py  geocodes_model.py  geocodes_moudle.py  geocodes_service.py
src/live_streams/: live_stream_controller.py  live_stream_model.py  live_stream_module.py  live_stream_service.py  live_streams_entity.py
src/pb/: service_pb2.py  service_pb2_grpc.py
