[tool.poetry]
name = "fullstack-be"
version = "0.1.0"
description = ""
authors = ["rlaminseok0824 <xornjsrlaals@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pynest-api = "^0.2.2"
beanie = "^1.26.0"
boto3 = "^1.34.113"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
